--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ g.locale }}">
+<html lang="{{ locale }}">
 <head>
     <meta charset="UTF-8">
     <title>{{ _(Welcome to Holberton) }}</title>
